--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,22 @@
+
 /*  your css code here. If applicable */
+.testimonial-section {
+    padding: 40px;
+    background-color: #f5f5f5;
+  }
+  
+  .testimonial {
+    padding: 20px;
+    border: 1px solid #ccc;
+    margin-bottom: 20px;
+    background-color: #fff;
+  }
+  .testimonial-text {
+    margin: 0;
+  }
+  
+  .testimonial-author {
+    margin: 0;
+    text-align: right;
+    font-style: italic;
+  }
